# ansible-llm-agent

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  galaxy.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: contributing-releasing-docs.yml  docs-trivial-and-readme-examples.yml  examples-cookbook.yml  examples-nginx-redis.yml  harden-sandbox-adversarial.yml  lint-housekeeping.yml  multi-host-integration-test.yml  review-priority-fixes.yml  sanity-required.yml
examples/: README.md
examples/generic/: README.md  disk-pressure.yml  oom-kill.yml  rules.yml  systemd-failed.yml
examples/kafka/: README.md  broker-down.yml  consumer-lag.yml  rules.yml
examples/kubernetes/: README.md  node-not-ready.yml  pod-crashloop.yml  rules.yml
examples/nginx/: 5xx-surge.yml  README.md  config-validation.yml  rules.yml
examples/postgres/: README.md  connection-issues.yml  rules.yml  slow-queries.yml
examples/redis/: README.md  memory-pressure.yml  rules.yml  slow-commands.yml
plugins/action/: ai_agent.py
plugins/module_utils/: llm_client.py  orchestrator.py  prompts.py  rules.py  sandbox.py  tools.py
plugins/modules/: ai_agent.py  ai_exec.py
roles/ai_agent/: README.md
tests/: conftest.py
tests/eval/: conftest.py  test_eval.py
tests/integration/: inventory.ini  playbook_debug.yml  playbook_localhost_smoke.yml  stub_llm.py
tests/sanity/: ignore-2.20.txt
(+17 files in other folders)
