[project]
name = "ansible-ai-agent"
# This project ships as an Ansible collection (see galaxy.yml for the
# distributable version); the pyproject lives only to anchor tool config.
version = "0.0.0"
requires-python = ">=3.10"

[tool.ruff]
line-length = 110
target-version = "py310"

extend-exclude = [
    "tests/integration",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function call in default arg (common in ansible)
    "UP007", # `X | Y` annotations require py310+; we use `from __future__ import annotations`
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B"]
"plugins/modules/*.py" = ["E402"]  # ansible modules use top-level DOCUMENTATION strings before imports

[tool.ruff.format]
quote-style = "double"

[tool.bandit]
# subprocess use is intentional and allow-listed at the rules layer; the
# sandbox module is the trusted boundary. assert_used trips on test files
# only, which we exclude. B108 (hardcoded /tmp) is a false positive for
# bwrap argv construction: we pass "/tmp" as a mount-namespace path, never
# write to it on the host.
exclude_dirs = ["tests", ".venv"]
skips = ["B404", "B603", "B108"]

